Tests/Runtime2/Error/Mixed/.build/mixedthrow.pr
[
  {
    "name": "MixedThrow",
    "description": "Build goal for MixedThrow",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "throw error \u0022mixed error\u0022",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "error",
            "action": "throw",
            "parameters": [
              {
                "name": "Message",
                "value": "mixed error",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/MixedThrow.goal",
    "prPath": "/.build/mixedthrow.pr",
    "hash": "16db04b6bed5cc31a88bc5151212d07f955a2f1958283afe4d62e42372eb57a3",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]